test/asm/strfmt.err
ERROR: strfmt.asm(14):
    Formatting number as type 's'
ERROR: strfmt.asm(14):
    STRFMT: 1 unformatted argument(s)
ERROR: strfmt.asm(22):
    STRFMT: Illegal '%' at end of format string
ERROR: strfmt.asm(24):
    STRFMT: Invalid format spec for argument 1
ERROR: strfmt.asm(26):
    STRFMT: Not enough arguments for format spec, got: 1, need: 3
error: Assembly aborted (5 errors)!
